fix bugs.
fix bugs.